@@ -8,6 +8,7 @@ import com.financeai.finance_management.dto.response.BaseResponse;
 import com.financeai.finance_management.dto.response.CategoryResponse;
 import com.financeai.finance_management.entity.Category;
 import com.financeai.finance_management.entity.User;
+import com.financeai.finance_management.enums.CategoryType;
 import com.financeai.finance_management.exception.exception.AppException;
 import com.financeai.finance_management.exception.exception.ErrorCode;
 import com.financeai.finance_management.repository.CategoryRepository;
@@ -39,72 +40,20 @@ public class CategoryServiceImpl implements ICategoryService {
 
     @Override
     public void createDefaultCategories(String userId) {
-        if (userId == null || userId.isBlank()) {
-            throw new AppException(ErrorCode.INVALID_REQUEST);
-        }
+        String normalizedUserId = requireValidId(userId);
 
-        User user = userRepository.findById(userId.trim())
-                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+        User user = findUserById(normalizedUserId);
 
-        if (!categoryRepository.findByUserId(userId.trim()).isEmpty()) {
+        if (!categoryRepository.findByUserId(normalizedUserId).isEmpty()) {
             return;
         }
 
         List<Category> defaultCategories = List.of(
-                Category.builder()
-                        .id(UUID.randomUUID().toString())
-                        .user(user)
-                        .name("Ăn uống")
-                        .type(com.financeai.finance_management.enums.CategoryType.EXPENSE)
-                        .icon("food")
-                        .color("#FF6B6B")
-                        .isArchived(false)
-                        .usageCount(0)
-                        .build(),
-
-                Category.builder()
-                        .id(UUID.randomUUID().toString())
-                        .user(user)
-                        .name("Di chuyển")
-                        .type(com.financeai.finance_management.enums.CategoryType.EXPENSE)
-                        .icon("car")
-                        .color("#4ECDC4")
-                        .isArchived(false)
-                        .usageCount(0)
-                        .build(),
-
-                Category.builder()
-                        .id(UUID.randomUUID().toString())
-                        .user(user)
-                        .name("Giải trí")
-                        .type(com.financeai.finance_management.enums.CategoryType.EXPENSE)
-                        .icon("game")
-                        .color("#1A535C")
-                        .isArchived(false)
-                        .usageCount(0)
-                        .build(),
-
-                Category.builder()
-                        .id(UUID.randomUUID().toString())
-                        .user(user)
-                        .name("Lương")
-                        .type(com.financeai.finance_management.enums.CategoryType.INCOME)
-                        .icon("salary")
-                        .color("#2ECC71")
-                        .isArchived(false)
-                        .usageCount(0)
-                        .build(),
-
-                Category.builder()
-                        .id(UUID.randomUUID().toString())
-                        .user(user)
-                        .name("Thưởng")
-                        .type(com.financeai.finance_management.enums.CategoryType.INCOME)
-                        .icon("bonus")
-                        .color("#27AE60")
-                        .isArchived(false)
-                        .usageCount(0)
-                        .build()
+                buildDefaultCategory(user, "Ăn uống", CategoryType.EXPENSE, "food", "#FF6B6B"),
+                buildDefaultCategory(user, "Di chuyển", CategoryType.EXPENSE, "car", "#4ECDC4"),
+                buildDefaultCategory(user, "Giải trí", CategoryType.EXPENSE, "game", "#1A535C"),
+                buildDefaultCategory(user, "Lương", CategoryType.INCOME, "salary", "#2ECC71"),
+                buildDefaultCategory(user, "Thưởng", CategoryType.INCOME, "bonus", "#27AE60")
         );
 
         categoryRepository.saveAll(defaultCategories);
@@ -114,14 +63,14 @@ public class CategoryServiceImpl implements ICategoryService {
     public BaseResponse<CategoryResponse> createCategory(CategoryCreationRequest request) {
         validateCreateRequest(request);
 
-        String currentUserId = getCurrentUserId().trim();
+        String currentUserId = getCurrentUserId();
+        User user = findUserById(currentUserId);
 
-        User user = userRepository.findById(currentUserId)
-                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+        String name = request.getName().trim();
 
         boolean existed = categoryRepository.existsByUserIdAndNameAndType(
                 currentUserId,
-                request.getName().trim(),
+                name,
                 request.getType()
         );
 
@@ -132,7 +81,7 @@ public class CategoryServiceImpl implements ICategoryService {
         Category category = Category.builder()
                 .id(UUID.randomUUID().toString())
                 .user(user)
-                .name(request.getName().trim())
+                .name(name)
                 .type(request.getType())
                 .icon(normalize(request.getIcon()))
                 .color(normalize(request.getColor()))
@@ -141,24 +90,24 @@ public class CategoryServiceImpl implements ICategoryService {
                 .build();
 
         categoryRepository.save(category);
+
         return BaseResponse.ok(mapToResponse(category));
     }
 
     @Override
     public BaseResponse<CategoryResponse> updateCategory(String id, CategoryUpdateRequest request) {
-        if (id == null || id.isBlank() || request == null) {
+        if (request == null) {
             throw new AppException(ErrorCode.INVALID_REQUEST);
         }
 
-        Category category = getCategoryOrThrow(id);
-        checkCategoryOwnership(category);
+        Category category = findOwnedCategory(id);
 
         if (request.getName() != null) {
-            String name = request.getName().trim();
-            if (name.isEmpty()) {
+            String newName = request.getName().trim();
+            if (newName.isEmpty()) {
                 throw new AppException(ErrorCode.INVALID_REQUEST);
             }
-            category.setName(name);
+            category.setName(newName);
         }
 
         if (request.getType() != null) {
@@ -178,38 +127,40 @@ public class CategoryServiceImpl implements ICategoryService {
         }
 
         categoryRepository.save(category);
+
         return BaseResponse.ok(mapToResponse(category));
     }
 
     @Override
     @Transactional(readOnly = true)
     public BaseResponse<CategoryResponse> getCategoryById(String id) {
-        Category category = getCategoryOrThrow(id);
-        checkCategoryOwnership(category);
-
+        Category category = findOwnedCategory(id);
         return BaseResponse.ok(mapToResponse(category));
     }
 
     @Override
     @Transactional(readOnly = true)
     public BaseResponse<BasePaginationResponse<CategoryResponse>> getAllCategories(CategoryFilterRequest request) {
+        if (request == null) {
+            throw new AppException(ErrorCode.INVALID_REQUEST);
+        }
+
         String currentUserId = getCurrentUserId();
         request.setUserId(currentUserId);
 
-        Specification<Category> spec = request.specification();
+        Specification<Category> specification = request.specification();
         Pageable pageable = request.pageable();
 
-        Page<CategoryResponse> pageResponse =
-                categoryRepository.findAll(spec, pageable).map(this::mapToResponse);
+        Page<CategoryResponse> pageResponse = categoryRepository
+                .findAll(specification, pageable)
+                .map(this::mapToResponse);
 
         return BaseResponse.ok(BasePaginationResponse.of(pageResponse));
     }
 
     @Override
     public BaseResponse<String> archiveCategory(String id) {
-        Category category = getCategoryOrThrow(id);
-        checkCategoryOwnership(category);
-
+        Category category = findOwnedCategory(id);
         category.setArchived(true);
         categoryRepository.save(category);
 
@@ -218,9 +169,7 @@ public class CategoryServiceImpl implements ICategoryService {
 
     @Override
     public BaseResponse<String> unarchiveCategory(String id) {
-        Category category = getCategoryOrThrow(id);
-        checkCategoryOwnership(category);
-
+        Category category = findOwnedCategory(id);
         category.setArchived(false);
         categoryRepository.save(category);
 
@@ -229,12 +178,9 @@ public class CategoryServiceImpl implements ICategoryService {
 
     @Override
     public BaseResponse<String> softDeleteCategory(String id) {
-        Category category = getCategoryOrThrow(id);
-        checkCategoryOwnership(category);
-
+        Category category = findOwnedCategory(id);
         category.setDeletedAt(Instant.now().toEpochMilli());
         category.deactivate();
-
         categoryRepository.save(category);
 
         return BaseResponse.ok("Category deleted successfully");
@@ -242,15 +188,27 @@ public class CategoryServiceImpl implements ICategoryService {
 
     @Override
     public BaseResponse<String> increaseUsageCount(String id) {
-        Category category = getCategoryOrThrow(id);
-        checkCategoryOwnership(category);
+        Category category = findOwnedCategory(id);
 
-        Integer currentUsage = category.getUsageCount() == null ? 0 : category.getUsageCount();
-        category.setUsageCount(currentUsage + 1);
+        int currentUsageCount = category.getUsageCount() == null ? 0 : category.getUsageCount();
+        category.setUsageCount(currentUsageCount + 1);
 
         categoryRepository.save(category);
 
         return BaseResponse.ok("Category usage count increased");
+    }
+
+    private Category buildDefaultCategory(User user, String name, CategoryType type, String icon, String color) {
+        return Category.builder()
+                .id(UUID.randomUUID().toString())
+                .user(user)
+                .name(name)
+                .type(type)
+                .icon(icon)
+                .color(color)
+                .isArchived(false)
+                .usageCount(0)
+                .build();
     }
 
     private void validateCreateRequest(CategoryCreationRequest request) {
@@ -267,15 +225,6 @@ public class CategoryServiceImpl implements ICategoryService {
         }
     }
 
-    private String normalize(String value) {
-        if (value == null) {
-            return null;
-        }
-
-        String trimmed = value.trim();
-        return trimmed.isEmpty() ? null : trimmed;
-    }
-
     private String getCurrentUserId() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
 
@@ -283,23 +232,56 @@ public class CategoryServiceImpl implements ICategoryService {
             throw new AppException(ErrorCode.UNAUTHENTICATED);
         }
 
-        return authentication.getName();
-    }
+        String userId = authentication.getName();
 
-    private Category getCategoryOrThrow(String id) {
-        if (id == null || id.isBlank()) {
-            throw new AppException(ErrorCode.INVALID_REQUEST);
+        if (userId == null || userId.trim().isEmpty()) {
+            throw new AppException(ErrorCode.UNAUTHENTICATED);
         }
 
-        return categoryRepository.findById(id.trim())
+        return userId.trim();
+    }
+
+    private String requireValidId(String id) {
+        if (id == null || id.trim().isEmpty()) {
+            throw new AppException(ErrorCode.INVALID_REQUEST);
+        }
+        return id.trim();
+    }
+
+    private User findUserById(String userId) {
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+    }
+
+    private Category findCategoryById(String id) {
+        String categoryId = requireValidId(id);
+
+        return categoryRepository.findById(categoryId)
                 .orElseThrow(() -> new AppException(ErrorCode.DATASOURCE_NOT_FOUND));
     }
 
-    private void checkCategoryOwnership(Category category) {
-        String currentUserId = getCurrentUserId().trim();
-        if (!category.getUser().getId().equals(currentUserId)) {
+    private Category findOwnedCategory(String categoryId) {
+        Category category = findCategoryById(categoryId);
+        String currentUserId = getCurrentUserId();
+
+        if (category.getUser() == null || category.getUser().getId() == null) {
             throw new AppException(ErrorCode.UNAUTHORIZED);
         }
+
+        if (!currentUserId.equals(category.getUser().getId().trim())) {
+            throw new AppException(ErrorCode.UNAUTHORIZED);
+        }
+
+        return category;
+    }
+
+    private String normalize(String value) {
+        if (value == null) {
+            return null;
+        }
+
+        String trimmed = value.trim();
+        return trimmed.isEmpty() ? null : trimmed;
     }
 
     private CategoryResponse mapToResponse(Category category) {
